--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-<h1> Ciao mammma guarda come mi diverto! </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Restaurant Prototype</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f9fa;
+    }
+    header {
+      background-color: #343a40;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    .container {
+      padding: 20px;
+    }
+    .section {
+      margin-bottom: 20px;
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    .star-rating {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+    .star-rating label {
+      font-size: 2rem;
+      color: #ffd700;
+      cursor: pointer;
+    }
+    .star-rating input {
+      display: none;
+    }
+    #feedback-form {
+      display: none;
+      margin-top: 20px;
+    }
+    iframe {
+      width: 100%;
+      height: 300px;
+      border: none;
+    }
+    footer {
+      text-align: center;
+      padding: 10px;
+      background-color: #343a40;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Restaurant Prototype</h1>
+  </header>
+  <div class="container">
+    <!-- Review Section -->
+    <div class="section">
+      <h2>Leave a Review</h2>
+      <div class="star-rating">
+        <input type="radio" name="rating" value="5" id="star-5"><label for="star-5">☆</label>
+        <input type="radio" name="rating" value="4" id="star-4"><label for="star-4">☆</label>
+        <input type="radio" name="rating" value="3" id="star-3"><label for="star-3">☆</label>
+        <input type="radio" name="rating" value="2" id="star-2"><label for="star-2">☆</label>
+        <input type="radio" name="rating" value="1" id="star-1"><label for="star-1">☆</label>
+      </div>
+      <div id="feedback-form">
+        <h3>We're sorry to hear that. Tell us how we can improve:</h3>
+        <form action="https://formspree.io/f/your-email" method="POST">
+          <textarea name="feedback" placeholder="Your feedback..." required></textarea><br>
+          <button type="submit">Submit Feedback</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Chatbot Section -->
+    <div class="section">
+      <h2>Chat with Us</h2>
+      <p>This is a placeholder for a chatbot or FAQ section. Here, you can integrate a chatbot widget or provide answers to common questions.</p>
+    </div>
+
+    <!-- Quiz Section -->
+    <div class="section">
+      <h2>Take a Quick Quiz</h2>
+      <p>Complete this quiz to win a free coffee!</p>
+      <!-- Replace the iframe src with your actual quiz link -->
+      <iframe src="https://docs.google.com/forms/d/e/your-form-id/viewform"></iframe>
+    </div>
+  </div>
+  <footer>
+    <p>&copy; 2024 Restaurant Prototype</p>
+  </footer>
+
+  <script>
+    document.querySelectorAll('.star-rating input').forEach((star) => {
+      star.addEventListener('change', () => {
+        const rating = star.value;
+        if (rating >= 4) {
+          window.location.href = 'https://www.google.com/search?q=restaurant+name#lrd=0x...';
+        } else {
+          document.getElementById('feedback-form').style.display = 'block';
+        }
+      });
+    });
+  </script>
+</body>
+</html>
