--- a/index.html
+++ b/index.html
@@ -47,6 +47,28 @@
       display: none;
       margin-top: 20px;
     }
+    textarea {
+      width: 100%;
+      height: 100px;
+      padding: 10px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      resize: vertical;
+      font-size: 1rem;
+    }
+    button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #343a40;
+      color: white;
+      cursor: pointer;
+      border-radius: 4px;
+      font-size: 1rem;
+      margin-top: 10px;
+    }
+    button:hover {
+      background-color: #495057;
+    }
     iframe {
       width: 100%;
       height: 300px;
@@ -116,7 +138,14 @@
     #chat-input button:hover {
       background-color: #495057;
     }
+    #loading {
+      display: none;
+      text-align: center;
+      color: gray;
+      margin-top: 10px;
+    }
   </style>
+  <!-- Include Axios via CDN if needed, but as per your request, we're not using it -->
 </head>
 <body>
   <header>
@@ -150,6 +179,7 @@
         <div id="chat-window">
           <!-- Messages will appear here -->
         </div>
+        <div id="loading">...</div>
         <div id="chat-input">
           <input type="text" id="message-input" placeholder="Type your message here..." />
           <button id="send-button">Send</button>
@@ -188,43 +218,176 @@
     const chatWindow = document.getElementById('chat-window');
     const messageInput = document.getElementById('message-input');
     const sendButton = document.getElementById('send-button');
+    const loadingIndicator = document.getElementById('loading');
+
+    // Initialize thread on first message
+    let threadId = null;
+    const assistantId = 'asst_elYJZIdmiufLu89jS8bdNc4B'; // Your Assistant ID
+    const apiKey = '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'; // Replace with your new OpenAI API key
+
+    // Helper functions for OpenAI API calls using fetch
+    async function createThread(apiKey) {
+      try {
+        const response = await fetch('https://api.openai.com/v1/threads', {
+          method: 'POST',
+          headers: {
+            'Authorization': `Bearer ${apiKey}`,
+            'Content-Type': 'application/json',
+            'OpenAI-Beta': 'assistants=v2'
+          },
+          body: JSON.stringify({})
+        });
+
+        if (!response.ok) {
+          throw new Error(`Error creating thread: ${response.statusText}`);
+        }
+
+        const data = await response.json();
+        return data.id;
+      } catch (error) {
+        console.error('Error creating thread:', error);
+        appendMessage('bot', 'Sorry, something went wrong while initializing our chat.');
+      }
+    }
+
+    async function sendMessageToAssistant(threadId, inputText, apiKey) {
+      try {
+        const response = await fetch(`https://api.openai.com/v1/threads/${threadId}/messages`, {
+          method: 'POST',
+          headers: {
+            'Authorization': `Bearer ${apiKey}`,
+            'Content-Type': 'application/json',
+            'OpenAI-Beta': 'assistants=v2'
+          },
+          body: JSON.stringify({
+            role: 'user',
+            content: inputText
+          })
+        });
+
+        if (!response.ok) {
+          throw new Error(`Error sending message: ${response.statusText}`);
+        }
+      } catch (error) {
+        console.error('Error sending message:', error);
+        appendMessage('bot', 'Sorry, something went wrong while sending your message.');
+      }
+    }
+
+    async function createRun(threadId, assistantId, apiKey) {
+      try {
+        const response = await fetch(`https://api.openai.com/v1/threads/${threadId}/runs`, {
+          method: 'POST',
+          headers: {
+            'Authorization': `Bearer ${apiKey}`,
+            'Content-Type': 'application/json',
+            'OpenAI-Beta': 'assistants=v2'
+          },
+          body: JSON.stringify({
+            assistant_id: assistantId
+          })
+        });
+
+        if (!response.ok) {
+          throw new Error(`Error creating run: ${response.statusText}`);
+        }
+
+        const data = await response.json();
+        return data.id;
+      } catch (error) {
+        console.error('Error creating run:', error);
+        appendMessage('bot', 'Sorry, something went wrong while processing your request.');
+      }
+    }
+
+    async function pollForRunStatus(threadId, runId, apiKey) {
+      const pollInterval = 2000; // Poll every 2 seconds
+      const maxRetries = 15; // Maximum polling attempts
+
+      for (let attempt = 0; attempt < maxRetries; attempt++) {
+        try {
+          const response = await fetch(`https://api.openai.com/v1/threads/${threadId}/runs/${runId}`, {
+            method: 'GET',
+            headers: {
+              'Authorization': `Bearer ${apiKey}`,
+              'Content-Type': 'application/json',
+              'OpenAI-Beta': 'assistants=v2'
+            }
+          });
+
+          if (!response.ok) {
+            throw new Error(`Error polling run status: ${response.statusText}`);
+          }
+
+          const data = await response.json();
+
+          if (data.status === 'completed') {
+            const messages = await retrieveMessages(threadId, apiKey);
+            const botMessage = messages.messages.find(msg => msg.role === 'assistant')?.content || 'Sorry, I could not process your request.';
+            appendMessage('bot', botMessage);
+            return;
+          }
+        } catch (error) {
+          console.error('Error polling run status:', error);
+          appendMessage('bot', 'Sorry, something went wrong while retrieving the response.');
+          return;
+        }
+
+        // Wait for pollInterval before next attempt
+        await new Promise(resolve => setTimeout(resolve, pollInterval));
+      }
+
+      appendMessage('bot', 'Sorry, the assistant is taking longer than expected to respond.');
+    }
+
+    async function retrieveMessages(threadId, apiKey) {
+      try {
+        const response = await fetch(`https://api.openai.com/v1/threads/${threadId}/messages`, {
+          method: 'GET',
+          headers: {
+            'Authorization': `Bearer ${apiKey}`,
+            'Content-Type': 'application/json',
+            'OpenAI-Beta': 'assistants=v2'
+          }
+        });
+
+        if (!response.ok) {
+          throw new Error(`Error retrieving messages: ${response.statusText}`);
+        }
+
+        const data = await response.json();
+        return data;
+      } catch (error) {
+        console.error('Error retrieving messages:', error);
+        appendMessage('bot', 'Sorry, something went wrong while retrieving the response.');
+      }
+    }
+
+    async function handleUserMessage(message) {
+      if (!threadId) {
+        loadingIndicator.style.display = 'block';
+        threadId = await createThread(apiKey);
+        loadingIndicator.style.display = 'none';
+        if (!threadId) return;
+      }
+
+      appendMessage('user', message);
+      loadingIndicator.style.display = 'block';
+
+      await sendMessageToAssistant(threadId, message, apiKey);
+      const runId = await createRun(threadId, assistantId, apiKey);
+      if (runId) {
+        await pollForRunStatus(threadId, runId, apiKey);
+      }
+
+      loadingIndicator.style.display = 'none';
+    }
 
     sendButton.addEventListener('click', () => {
       const message = messageInput.value.trim();
       if (message === '') return;
-
-      // Display user message
-      appendMessage('user', message);
+      handleUserMessage(message);
       messageInput.value = '';
-
-      // Send message to OpenAI API
-      fetch('https://api.openai.com/v1/chat/completions', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': 'Bearer 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'
-        },
-        body: JSON.stringify({
-          model: "gpt-4",
-          messages: [
-            { role: "system", content: "You are a helpful assistant for a restaurant website." },
-            { role: "user", content: message }
-          ]
-        })
-      })
-      .then(response => response.json())
-      .then(data => {
-        if (data.choices && data.choices.length > 0) {
-          const reply = data.choices[0].message.content.trim();
-          appendMessage('bot', reply);
-        } else {
-          appendMessage('bot', 'Sorry, I could not process your request.');
-        }
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        appendMessage('bot', 'An error occurred. Please try again later.');
-      });
     });
 
     function appendMessage(sender, message) {
