--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </head>
 <body>
   <header>
-    <h1>Restaurant Prototype</h1>
+    <h1>Restaurant Prototipo</h1>
   </header>
   <div class="container">
     <!-- Review Section -->
